# sspku-llm-outline

./: .gitignore  LICENSE  README.md
topics/: Tokenizer.md
topics/mlp-lab-sp/: README.md  check.ipynb  check_dp_a_mb_same.py  check_dp_grad_same.py  check_dp_loss_same.py  check_input_same.py  check_loss_unbiased.py  check_pp_loss.py  check_sp_a_mb_same.py  launcher.sh  parse_pt.py  requirements.txt
topics/mlp-lab-sp/dist_mlp/: distributed_setup.py  mlp_model.py  pipeline.py  tensor_parallel.py  train.py  utils.py
topics/mlp-lab-sp/dist_mlp/tests/: test_sp.sh  test_tp.py  test_tp.sh
topics/quant/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  benchmark.py  comprehensive_quantization_lab.ipynb  requirements.txt  run_example_experiment.py  setup.py  visualization.py
topics/quant/core/: __init__.py  gptq_quantizer.py  kv_cache_quant.py  mixed_precision_search.py  ptq_static.py  qat_training.py  quantization_basics.py
topics/rag/: .gitignore  README.md  main.py  pyproject.toml
topics/tokenizer/: README.md  example_qwen3_tokenizer.py  pyproject.toml
