[project]
name = "rag-lab"
version = "0.1.0"
description = "RAG Lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "lab-1806-vec-db>=0.8.1",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "tokenizers>=0.22.1",
    "typer>=0.24.1",
]
